--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>login</title>
-    <base href="/" />
+    <base href="https://ajsuvarna6.github.io/ajsuvarna6.github.io-signin/" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="app/bootstrap.min.css"></link>
-    <link rel="stylesheet" href="app/style.css"></link>
+    <link rel="stylesheet" href="./bootstrap.min.css"></link>
+    <link rel="stylesheet" href="./style.css"></link>
     <script src="https://apis.google.com/js/client.js"></script>
     <script src="//connect.facebook.net/en_US/sdk.js"></script>
   </head>
 <body>
   <div id='root'></div>
-<script type="text/javascript" src="index_bundle.js"></script></body>
+<script type="text/javascript" src="./index_bundle.js"></script></body>
 </html>
