--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>login</title>
-    <base href="https://ajsuvarna6.github.io/ajsuvarna6.github.io-signin/" />
+    <base href="https://ajsuvarna6.github.io/signin/" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="./bootstrap.min.css"></link>
